scrollbar fix

--- a/src/styles/components/_graph_item.scss
+++ b/src/styles/components/_graph_item.scss
@@ -1,5 +1,5 @@
 .graph_item {
-  @apply flex flex-col overflow-hidden items-start justify-start bg-gray-1 border-b border-r border-primary-light transition-all duration-100 ease-in-out;
+  @apply flex flex-col items-start justify-start bg-gray-1 border-b border-r border-primary-light transition-all duration-100 ease-in-out;
   min-height: 45vh;
   &:hover {
     @apply drop-shadow-2xl bg-white;
