--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -50,7 +50,7 @@ li {
       @apply py-4 w-full;
 
       .user {
-        @apply w-12 h-12 rounded-full border-2 border-primary-light flex items-center justify-center font-semibold text-base;
+        @apply w-12 h-12 rounded-full border-2 border-primary-light flex items-center justify-center font-semibold text-base focus:outline-none focus:ring focus:ring-primary  focus:ring-offset-2 hover:ring hover:ring-primary  hover:ring-offset-2;
       }
     }
 
