--- a/src/styles/components/_tabs.scss
+++ b/src/styles/components/_tabs.scss
@@ -82,7 +82,7 @@
 
           &:hover,
           &:focus {
-            @apply bg-primary-light-10 border-primary-light shadow-xl;
+            @apply bg-primary-light-10  shadow-xl;
           }
         }
       }
